5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1715_3069.log
== TEST (2019-05-02 16:13:57) 
-- CODE:
x = input("Ataque: ")upper.() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x==FURIA):
	pontos=(10+d1+d2)
	print(pontos)

-- ERROR:
File "XXXX", line 1
    x = input()upper.() #ATAQUES: FURIA/GRITO/TOQUE
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:12) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x==FURIA):
	pontos=(10+d1+d2)
	print(pontos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(x==FURIA):
NameError: name 'FURIA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:33) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(x==FURIA):
NameError: name 'FURIA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:59) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO")
	pontos=6+d1+d2
	print(pontos)

-- ERROR:
File "XXXX", line 9
    elif(x=="GRITO")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:09) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)

-- ERROR:
File "XXXX", line 9
    elif(x=="GRITO")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:46) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos(d1+d2)**2
	print(pontos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    pontos(d1+d2)**2
NameError: name 'pontos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:03) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=(d1+d2)**2
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:05) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:40) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:36) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:45) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:57) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:14) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)
else:
	pontos="Entrada invalida"

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:39) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)
else:
	pontos="Entrada invalida"

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:53) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:23:29) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:23:52) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=((d1+d2)**2)
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:10) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=(d1+d2)
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:44) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=d1+d2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:54) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=d1+d2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:17) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))
d1 = (a>=1)and(a<=8)
d2 = (b>=1)and(b<=8)
if(x=="FURIA"):
	pontos=(10+d1+d2)
	print(pontos)
elif(x=="GRITO"):
	pontos=6+d1+d2
	print(pontos)
elif(x=="TOQUE"):
	pontos=d1+d2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:03) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos = 10+a+b
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=6+a+b
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:32:16) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos = 10+a+b
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=6+a+b
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- EXECUTION TIME:
0.192021
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
20
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
17
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:21) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos = 10+a+b
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=6+a+b
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:51) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos = 10+a+b
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=6+a+b
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:38) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos = 10+a+b
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=6+a+b
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=((a+b)**2)
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:52) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos =(10+a+b)
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(6+a+b)
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:16) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(10+a+b)
	print(pontos)
elif((x=="GRITO")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(6+a+b)
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:56) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(10+a+b)
	print(pontos)
elif((x=="GRITO")and(a>=1)and(a<=8)and(b>=1)and(b<=8)):
	pontos=(6+a+b)
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:22:09) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(10+a+b)
	print(pontos)
elif((x=="GRITO")and(a>=1)and(a<=8)and(b>=1)and(b<=8)):
	pontos=(6+a+b)
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:22:55) 
-- CODE:
x = input("Ataque: ").upper() #ATAQUES: FURIA/GRITO/TOQUE
a = int(input("sorteio 1: "))
b = int(input("sorteio 2: "))

if((x=="FURIA")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(10+a+b)
	print(pontos)
elif((x=="GRITO")and(a>=1)and(a<=8)and(b>=1)and(b<=8)):
	pontos=(6+a+b)
	print(pontos)
elif((x=="TOQUE")and(a>=1)or(a<=8)and(b>=1)or(b<=8)):
	pontos=(a+b)**2
	print(pontos)
else:
	pontos="Entrada invalida"
	print(pontos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
